#50 SonarQube debt elimination
* #50 Exclude test source sets from SonarQube analysis

sonar.exclusions only applies to sonar.sources; the four test source
sets declared via sonar.tests were still being analyzed, contributing
50 issues that don't reflect production-code debt. Switch to
sonar.test.exclusions so the test source sets stop being analyzed
without losing SonarQube's test-code classification.

* #50 Remove duplicate CSS selectors flagged by SonarQube

css:S4666 — 12 selectors repeated within the same comma-separated group
(scroll-bar-general.css), or as a same-property block immediately following
the original (base.css), or as a separate block trivially mergeable with
the original (tracktable-trackareaset.css, playqueuepane.css). All
duplicates removed; intent and rendered styles preserved.

* #50 Remove 8 unused imports flagged by SonarQube

java:S1128 — none of the removed imports are referenced elsewhere in
their respective files. No test or runtime change.

* #50 Use Stream.toList() instead of collect(Collectors.toList())

java:S6204 — replaces 12 occurrences (10 in EditController, 1 each in
PlaylistTreeView and TrackQueueListCell). All resulting lists are
read-only at their call sites; no toCollection downgrade needed. Also
removed now-unused Collectors / static toList imports to avoid
introducing fresh S1128 issues.

* #50 Replace lambdas with method references where equivalent

java:S1612 — two occurrences (PlayQueueController and PlayerController).
Cast lambdas `item -> (ObservableAudioItem) item` replaced with
`ObservableAudioItem.class::cast`.

* #50 Delete commented-out code blocks flagged by SonarQube

java:S125 — three genuine commented-code blocks deleted (history
preserved in git). The fourth flagged occurrence in BootProgressTask is
descriptive stage documentation, not commented code; left untouched and
will be marked false positive on the analyzer side.

* #50 Convert @Autowired field injection to constructor injection

java:S6813 — four s